<resources>

    <!--main activity sudoku grid puzzle-->
    <string name="app_name">Wudoku</string>
    <string name="chooseWord">Tap on a word</string>
    <string name="chooseCell">Tap on a cell first</string>
    <string name="boardTrue">You did it!</string>
    <string name="boardFalse">Try again!</string>
    <string name="check">Verify answers</string>
    <string name="hint">Tap on the box again for a hint!</string>
    <string name="back_select">Undo</string>
    <string name="back_select_information">Tapping this button again will take you back to the mode selection page</string>
    <string name="pause">Pause</string>

    <!--Welcome Page -->
    <string name="welcome">Wudoku</string>
    <string name="start_button">Play</string>
    <string name="help_button">Instructions</string>
    <string name="share_description">share score and invite friends to download Wudoku"</string>
    <string name="share_message">I\'m learning new languages with Wudoku!</string>
    <string name="dark_mode">Dark Mode</string>

    <!-- Instructions Page-->
    <string name="instructions">Instructions</string>
    <string name="description1">Fill in the grid with words such that every row, column and 3x3 grid contains one of each of the 9 words translated into the either French or English (depending on the mode that you choose).</string>
    <string name="description2">If ENGLISH>FRENCH mode is selected, enter the French equivalents of the 9 English words already on the board. If FRENCH->ENGLISH mode is selected, enter the English equivalents of the 9 French words already on the board.</string>
    <string name="hint_description">To unlock hints, tap on pre-filled squares of the Sudoku puzzle</string>
    <string name="description3">The game is complete once all 81 squares have been filled, and the answer has been verified as correct after clicking on the ‘Check Answers’ button</string>
    <string name="good_luck">Good luck!</string>
    <string name="back_main">Go Back to Main Menu</string>

    <!--Load Words-->
    <string name="game_mode">Game Mode</string>
    <string name="generate_puzzle">Generate Your Own Puzzle</string>
    <string name="default_puzzle">Default Puzzle</string>
    <string name="default_description">Start playing with our default set of words</string>
    <string name="load_description">Upload your own .csv file using the format: \n Column 1 - Words in English \n Column 2 - Words in French \n and play a game using those words</string>
    <string name="continue_description">Continue your last game</string>

    <!--Language Selector Page-->
    <string name="select_lang">Select Language Mode</string>
    <string name="mode_1"> ENGLISH > FRENCH</string>
    <string name="mode_2"> FRENCH > ENGLISH</string>
    <string name="how_to">Choose a language mode to begin your Sudoku puzzle</string>
    <string name="how_to2">To practice your listening comprehension \n skills, enable Listening Comprehension \n Mode to proceed with selecting a language.</string>
    <string name="how_to2_land">To practice your listening \n comprehension skills, enable \n Listening Comprehension Mode \n to proceed with selecting \n a language.</string>
    <string name="enableLC">Listening Comprehension Mode</string>
    <string name ="gridSize_prompt">Grid Size Options</string>
    <string-array name="gridSize">
        <item>DEFAULT: 9x9 grid</item>
        <item>4x4 grid</item>
        <item>6x6 grid</item>
        <item>12x12 grid</item>
    </string-array>




    <string name="continue_text">Continue Game</string>
    <string name="background">Background</string>

    <string name="add">Add New Chapters</string>
    <string name="delete">Delete</string>
    <string name="chapter_description">Add button would add a new chapter. Tap Delete Button once and tap a chapter would delete it. Chapter name without words file in it will not be saved</string>
    <string name="empty_chapter">This Chapter is empty. Please delete it an recreate one.</string>
    <string name="LOAD">Load and Start</string>
    <string name="enter_chapter_name">Please enter chapter name</string>
    <string name="chapter_heading">Load Chapters</string>
</resources>
