<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turquoise"
    tools:context=".Controller.MainMenu">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="108dp"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="358dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17sp"
        android:layout_marginLeft="17sp"
        android:layout_marginBottom="26sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/help_button"
        app:layout_constraintStart_toStartOf="@+id/help_button" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="281dp"
        android:background="@drawable/round_buttons"
        android:text="@string/start_button"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/help_button"
        android:layout_width="170dp"
        android:layout_height="49dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="349dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="205dp"
        android:background="@drawable/round_buttons"
        android:text="@string/help_button"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bottom_right"
        tools:layout_editor_absoluteX="243dp"
        tools:layout_editor_absoluteY="568dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/top_left"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/share_button"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="457dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="54dp"
        android:background="@drawable/round_buttons"
        android:contentDescription="@string/share_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="?attr/actionModeShareDrawable" />


</android.support.constraint.ConstraintLayout>

